Updated text on show result
Updated text on show result

--- a/adyenCheckoutDemo/Views/Home/ShowResult.cshtml
+++ b/adyenCheckoutDemo/Views/Home/ShowResult.cshtml
@@ -53,7 +53,7 @@
                             }
                             else if (ViewBag.resultCode == "Received")
                             {
-                                <h3>Your payment has been received.<br /> </h3>
+                                <h3>Your payment is being processed. We will update the status shortly!<br /> </h3>
                                 <h5>
                                     Please use the following reference number to troubleshoot:
                                     <span> @ViewBag.merchantreference </span>
